--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
     <p>second author</p>
     <button type="button">Remove</button>
     <hr />
-    <form action="">
-      <input type="text" placeholder="Title" /><br /><br />
-      <input type="text" placeholder="Author" /><br /><br />
-      <button type="submit">Add</button>
+    <form action="" id="form">
+      <input id="title" type="text" placeholder="Title" /><br /><br />
+      <input id="author" type="text" placeholder="Author" /><br /><br />
+      <button id="submit-button" type="submit">Add</button>
     </form>
     <script src="index.js"></script>
   </body>
