Add functionality to store books.

--- a/index.html
+++ b/index.html
@@ -1,27 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
-    <title>Document</title>
-  </head>
-  <body>
-    <h1>Awesome Books</h1>
-    <p>Title</p>
-    <p>Author</p>
-    <button type="button">Remove</button>
-    <hr />
-    <p>Second title</p>
-    <p>second author</p>
-    <button type="button">Remove</button>
-    <hr />
-    <form action="" id="form">
-      <input id="title" type="text" placeholder="Title" /><br /><br />
-      <input id="author" type="text" placeholder="Author" /><br /><br />
-      <button id="submit-button" type="submit">Add</button>
-    </form>
-    <script src="index.js"></script>
-  </body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="style.css" />
+		<title>Document</title>
+	</head>
+	<body>
+		<main>
+			<h1>Awesome Books</h1>
+			<p>Title</p>
+			<p>Author</p>
+			<button type="button">Remove</button>
+			<hr />
+			<p>Second title</p>
+			<p>second author</p>
+			<button type="button">Remove</button>
+			<hr />
+			<ul class="book-display"></ul>
+			<form action="" id="form">
+				<input id="title" type="text" placeholder="Title" /><br /><br />
+				<input id="author" type="text" placeholder="Author" /><br /><br />
+				<button id="submit-button" type="submit">Add</button>
+			</form>
+		</main>
+		<script src="index.js"></script>
+	</body>
 </html>
