Add form section

--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
   </head>
   <body>
     <main>
-      <h1>Awesome Books</h1>
+      <h1>All awesome books</h1>
 
       <ul class="book-display"></ul>
       <form action="" id="form">
+        <h2>Add a new book</h2>
         <input id="title" type="text" placeholder="Title" /><br /><br />
         <input id="author" type="text" placeholder="Author" /><br /><br />
         <button id="submit-button" type="submit">Add</button>
