--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
   <body>
     <main>
       <h1>All awesome books</h1>
-
-      <ul class="book-display"></ul>
+      <div class="list-display">
+      	<ul class="book-display"></ul>
+      </div>
+      <hr>
       <form action="" id="form">
         <h2>Add a new book</h2>
         <input id="title" type="text" placeholder="Title" /><br /><br />
